vlib/v/checker/tests/nested_fn_alias_err.vv
type Fn1 = fn ()
type Fn2 = Fn1
